--- a/css/objects.layout.css
+++ b/css/objects.layout.css
@@ -6,58 +6,81 @@
     with width utilities
 */
 
-.o-layout {}
+.o-layout {
+}
 
-    .o-layout__item {}
+.o-layout__item {
+}
 
 /* gutter modifiers, these affect o-layout__item too */
 
-.o-layout--gutter {}
+.o-layout--gutter {
+}
 
-.o-layout--gutter > .o-layout__item {}
+.o-layout--gutter > .o-layout__item {
+}
 
-.o-layout--gutter-sm {}
+.o-layout--gutter-sm {
+}
 
-.o-layout--gutter-sm > .o-layout__item {}
+.o-layout--gutter-sm > .o-layout__item {
+}
 
-.o-layout--gutter-lg {}
+.o-layout--gutter-lg {
+}
 
-.o-layout--gutter-lg > .o-layout__item {}
+.o-layout--gutter-lg > .o-layout__item {
+}
 
 /* reverse horizontal row modifier */
 
-.o-layout--row-reverse {}
+.o-layout--row-reverse {
+}
 
 /* Horizontal alignment modifiers*/
 
-.o-layout--justify-start {}
+.o-layout--justify-start {
+}
 
-.o-layout--justify-end {}
+.o-layout--justify-end {
+}
 
-.o-layout--justify-center {}
+.o-layout--justify-center {
+}
 
-.o-layout--justify-space-around {}
+.o-layout--justify-space-around {
+}
 
-.o-layout--justify-space-between {}
+.o-layout--justify-space-between {
+}
 
 /* Vertical item alignment modifiers */
 
-.o-layout--align-start {}
+.o-layout--align-start {
+}
 
-.o-layout--align-end {}
+.o-layout--align-end {
+}
 
-.o-layout--align-center {}
+.o-layout--align-center {
+}
 
-.o-layout--align-baseline {}
+.o-layout--align-baseline {
+}
 
 /* Vertical content alignment modifiers. Only work if there is one than one flex item */
 
-.o-layout--align-content-start {}
+.o-layout--align-content-start {
+}
 
-.o-layout--align-content-end {}
+.o-layout--align-content-end {
+}
 
-.o-layout--align-content-center {}
+.o-layout--align-content-center {
+}
 
-.o-layout--align-content-space-around {}
+.o-layout--align-content-space-around {
+}
 
-.o-layout--align-content-space-between {}
+.o-layout--align-content-space-between {
+}
